turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:64: error: ';' expected but ')' found.
  rule = Array( Array( Array(1, LEFT  , 2), Array(0, RIGHT , 0) ),Array( Array(1, LEFT  , 0), Array(0, RIGHT , 0) ), Array( Array(0, LEFT  , 0),Array(0, LEFT  , 1) ) ) );
                                                                                                                                                                        ^